# advent-of-code-2023

./: .gitignore  Cargo.toml  README.md
aoc-2023/: Cargo.toml  README.md
aoc-2023/src/days/: day06.rs  day07.rs  day09.rs  day10.rs  day14.rs  day15.rs
aoc-2024/: Cargo.toml  README.md
aoc-2024/inputs/: day11.txt  day19.txt  test.txt
aoc-2024/src/: main.rs
aoc-2024/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day11.rs  day12.rs  day13.rs  day15.rs  day16.rs  day17.rs  day19.rs  mod.rs
src/: main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day08.rs  day09.rs  day10.rs  day11.rs  mod.rs
