[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.4.10", features = ["derive"] }
indexmap = "2.1.0"
itertools = "0.12.0"
num = "0.4.1"
winnow = "0.6.20"
